# CnakeCharmer

./: .benchmark_cache.json  .env.example  .gitignore  .mcp.json  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  FEATURE_COVERAGE.md  Makefile  README.md  REFACTOR.md  benchmarks.md  docker-compose.yml  pyproject.toml  run_benchmarks.py  setup.py
.claude/: settings.json
builder/: README.md  docker-compose.yml  pyproject.toml
builder-react/: docker-compose.yaml
builder-react/backend/: Dockerfile  main.py  pyproject.toml
builder-react/frontend/: Dockerfile  package-lock.json  package.json
builder/client/: Dockerfile  monitor.py  pyproject.toml
builder/web/: Dockerfile  Dockerfile.node  main.py  package.json  pyproject.toml  requirements.txt  socket_server.js
builder/web-client/: Dockerfile  package-lock.json  package.json
builder/web-client/src/: App.tsx  config.ts
builder/web-client/src/api/: apiClient.ts  wsClient.ts
builder/web-client/src/components/: TabPanel.tsx
builder/web-client/src/components/CodeEditor/: index.tsx
builder/web-client/src/components/JobHistory/: index.tsx
builder/web-client/src/components/ResultsViewer/: AnalysisDetails.tsx  CodeViewer.tsx  TabPanel.tsx  Tabs.tsx  index.tsx
builder/web-client/src/components/SystemStatus/: index.tsx
builder/web-client/src/contexts/: JobContext.tsx  SocketContext.tsx  WebSocketContext.tsx
builder/web-client/src/hooks/: useJobStatus.ts
builder/web-client/src/pages/: Dashboard.tsx
builder/web-client/src/types/: index.ts  lodash.d.ts
builder/web/static/: index.html
builder/web/static/css/: dashboard.css  main.css
builder/web/static/js/: codeEditor.js  dashboard.js  jobHistory.js  resultViewer.js
builder/worker/: Dockerfile  worker.py
cnake_charmer/: __init__.py  config.py  logging_config.py  mcp_server.py
cnake_charmer/benchmarks/: __init__.py  registry.py
cnake_charmer/checkout/: __init__.py  hf.py  manager.py
cnake_charmer/dataset/: difficulty.py  loader.py
cnake_charmer/engine/: tensor.pxd
cnake_charmer/eval/: __init__.py  benchmark.py  bwrap.py  compiler.py  correctness.py  lint.py  memory_safety.py  pipeline.py  runners.py  sandbox.py
cnake_charmer/generate/: 1.reward_model_program.py  3.prompt_reward_model_with_analyzer_program.py  README.md  code_generator.py  code_runner.py  cython_analyzer.py  database.py  equivalency_checker.py  example.py  example_build.py  feedback_loop.py  program.py  program2.py  reward_system.py  test_cython_builder.py
cnake_charmer/pp/: __init__.c  __init__.html
cnake_charmer/rewards/: __init__.py  annotations.py  compilation.py  composite.py  correctness.py  lint.py  performance.py
cnake_charmer/sources/: __init__.py  algorithmic.py  base.py  stack_v2.py
cnake_charmer/traces/: __init__.py  budgeted_react.py  io.py  lm.py  models.py  thinking_react.py
cnake_charmer/training/: credit.py  dspy_agent.py  environment.py  grpo.py  prompts.py  rollout.py  sft_scoring.py  sft_validation.py  trajectory.py  trajectory_io.py
cnake_charmer/validate/: __init__.py  annotations.py  benchmark.py  compiler.py  pipeline.py
cnake_charmer/wiki/: limits.py  llm_reflect.py  merge.py  reflect.py  search.py  trace_analysis.py
cnake_data/: loader.py
cnake_data/benchmarks/: registry.py
cnake_data/unpaired/: aabb_geometry.py  aatree_map.py  activity_base.py  adapter_hamming.py  adjusted_window_array.py  advent_fuel_calc.py  affine2d_transform.py  alias_sampler.py  alignment_array.py  anagram_signature_counts.py  angle_wrap.py  anisotropic_diffusion_step.py  anova_kernel_dp.py  approx_e.py  argus_fast_models.py  arrayfuncs_small.py  astrophysics_distance_modulus.py  autodiff_scalar_ops.py  avalam_possible_moves.py  average_quality_fastpow.py  barcode_run_lengths.py  baseline_encoder.py  bbox_overlap_metrics.py  beam_splitter_transform.py  bearing_rul_features.py  becke_weights.py  beretta_codec.py  bilateral_gauss_seidel.py  bilinear_sample_image.py  binary_vector_conversions.py  binomial_choose.py  bisect_root_solver.py  bitboard_othello.py  blend2d_function.py  block_distribution_map.py  block_sampling_ops.py  bloom_filter_math.py  blowfly_bootstrap_utils.py  blp_contraction_market.py  blr_deconvolution.py  (+583 more)
configs/models/: _base.yaml  deepseek_v3.yaml  deepseek_v4_flash.yaml  deepseek_v4_pro.yaml  elephant_alpha.yaml  gemma4_31b.yaml  glm5.yaml  glm51.yaml  gpt_oss_120b.yaml  kimi.yaml  mimo.yaml  qwen36_plus.yaml  qwen3_coder_next.yaml
configs/training/: grpo_base.yaml  sft_base.yaml
data/: SFT_SELECTION_CRITERIA.md  missing_think_problems.txt  system_prompt.txt  tool_schemas.json  tools.json
data/grpo_batches/: manifest.latest.json
data/grpo_problems/: README.md  bisection_root.py  count_inversions.py  distance_matrix.py  distance_point_ellipse.py  factorial_combinations.py  fibonacci_sequence.py  gauss_blur_1d.py  ks_max_distance.py  laplace_relaxation.py  largest_palindrome_product.py  linearize_3d_coords.py  net_radiation.py  numerical_integrate.py  pixel_blend.py  prime_sieve_bitwise.py  rk2_ode_solver.py  run_length_encode.py  sparse_dot_product.py  sqrt_trial_prime.py  triangular_number.py  (+4 more)
docs/: BENCHMARKS.md  CONTRIBUTING.md  FEATURE_COVERAGE.md  TOOL_DESIGN.md  tool_design.md
example/: README.md  docker-compose.yaml  run.sh
prompt/: best_practices.md  long_prompt.md  med_prompt.md  prompt1.md  prompt2.md  prompt3.md  prompt4.md  prompt5.md  prompt6.md  prompt7.md  prompt8.md  short_prompt.md
scripts/: build_sft.py  checkout.py  collect_traces.py  compare_xnnpack.py  consolidate_traces.py  convert_traces_v2.py  create_grpo_batches.py  export_parallel_pairs.py  generate_traces.py  optimize_prompt.py  publish_dataset.py  retry_failures.py  run_benchmarks.py  sample_openrouter.py  start_vllm_server.sh  test_grpo_memory.py  test_sft_model.py  test_training.py  train_grpo.py  train_sft.py  upload_corpus.py  wiki_reflect.py
tests/: test_build_sft.py  test_grpo_prompts.py  test_sandbox.py  test_training_pipeline.py
utils/: train.py
v2/: .env.example  README.md  docker-compose.yml
wiki/: index.md  log.md  schema.md
(+5500 files in other folders)
