[build-system]
requires = [
    "setuptools>=42",
    "wheel",
    "setuptools_scm[toml]",
    "Cython>=0.29.21",
    "numpy>=1.20"
]
build-backend = "setuptools.build_meta"

[project]
name = "cnake_charmer"
version = "0.1.0"
description = "A living dataset of parallel Python/Cython implementations for AI training and benchmarking."
authors = [
    { name = "Lee Miller", email = "dleemiller@protonmail.com" },
    {name =  "Bradley Smith",email = "bssmith925@gmail.com"}
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.9"
keywords = [
    "python", "cython", "benchmark", "dataset"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Cython",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]
dependencies = [
    "dspy>=2.6.6",
    "numpy (>=2.0,<3.0)",
]

[project.urls]
Homepage = "https://github.com/dleemiller/cnakecharmer"
Repository = "https://github.com/dleemiller/cnakecharmer"
Documentation = "https://github.com/dleemiller/cnakecharmer#readme"


[tool.poetry.group.dev.dependencies]
cython = "^3.0.12"
pytest = "^8.3.4"
black = "^25.1.0"

