[build-system]
requires = [
    "setuptools>=42",
    "wheel",
    "setuptools_scm[toml]",
    "Cython>=3.0",
    "numpy>=2.2"
]
build-backend = "setuptools.build_meta"

[tool.uv]
package = false

[project]
name = "cnake_charmer"
version = "0.1.0"
description = "A living dataset of parallel Python/Cython implementations for AI training and benchmarking."
authors = [
    { name = "Lee Miller", email = "dleemiller@protonmail.com" },
    { name = "Bradley Smith", email = "bssmith925@gmail.com" }
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.11"
keywords = [
    "python", "cython", "benchmark", "dataset"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Cython",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]
dependencies = [
    "accelerate>=1.0",
    "cython>=3.0",
    "dspy>=2.6",
    "duckdb>=1.5.1",
    "mcp>=1.26.0",
    "numpy>=2.2",
    "peft>=0.14",
    "pythran>=0.18.1",
    "rich>=14.3.3",
    "setuptools>=75",
    "torch>=2.6",
    "transformers>=5.2",
    "trl>=1.0.0rc1",
]

[dependency-groups]
dev = [
    "pytest>=8",
    "ruff>=0.11",
    "pre-commit>=4",
    "cython-lint>=0.19.0",
]

[project.urls]
Homepage = "https://github.com/dleemiller/cnakecharmer"
Repository = "https://github.com/dleemiller/cnakecharmer"
Documentation = "https://github.com/dleemiller/cnakecharmer#readme"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501", "UP038"]

[tool.ruff.format]
quote-style = "double"
