[project]
name = "cython-builder"
version = "0.1.0"
description = "A Cython build system with web interface"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cython>=3.0.12",
    "cython-lint>=0.16.6",
    "flake8>=7.2.0",
    "wheel>=0.45.1",
    "setuptools>=80.1.0",
    "numpy>=2.2.5",
    "beautifulsoup4>=4.12.0",  
    "fastapi>=0.115.12",
    "uvicorn>=0.34.2",
    "python-multipart>=0.0.20",
    "pydantic>=2.11.4"
]

[build-system]
requires = ["setuptools>=80.1.0", "wheel>=0.45.1"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["worker", "web"]