[project]
name = "cython-analyzer-monitor"
version = "0.1.0"
description = "Monitor service for Cython code analysis"
requires-python = ">=3.9"
dependencies = [
    "websockets==12.0",
    "aiohttp==3.9.1",
    "python-dotenv==1.0.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.ruff]
line-length = 88
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "B", "I"]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space" 